--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>
           Y este es el parrafo de inicio donde vamos a explicar las cosas
-          increéibles que se pueden hacer con ramas
+          increibles que se pueden hacer con ramas o tambien llamadas branches
+          de Git
         </p>
       </div>
     </div>
