--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        NUEVA CABECERA ÑERI
+        HYPERBLOG
+        <span id="tagline">Tu blog de confianza</span>
       </div>
       <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
