--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Cabecera
+        Cabecera =>
       </div>
       <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
@@ -14,6 +14,10 @@
           Y este es el parrafo de inicio donde vamos a explicar las cosas
           increibles que se pueden hacer con ramas o tambien llamadas branches
           de Git
+        </p>
+        <p>
+          Los blogs son la mejor forma de compartir tus ideas e informacion.
+          Mucho mas que ir a conferencias o salir en youtube.
         </p>
       </div>
     </div>
