cambie la cabecera y puse todo en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div id="container">
       <div id="cabecera">
         HYPERBLOG
-        <span id="tagline">Tu blog de confianza</span>
+        <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
@@ -20,6 +20,7 @@
           Los blogs son la mejor forma de compartir tus ideas e informacion.
           Mucho mas que ir a conferencias o salir en youtube.
         </p>
+        <p>Suscribete & dale like</p>
       </div>
     </div>
   </body>
