--- a/blogpost.html
+++ b/blogpost.html
@@ -12,10 +12,13 @@
         <span id="tagline">Tu blog de cabecera</span>
       </div>
       <div id="post">
-        <h1>Este es el título atractivo e interesante del post</h1>
+        <h1>Ultima excurc&iacute; en la hermosa ciudad de Jujuy</h1>
         <p>
-          Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
-          incre&iacute;bles que se pueden hacer con ramas
+          En esta ocaci&oacute;n visitiamos la hermosa ciudad de Humahuaca, en
+          la foto podemos ver el monumento a los libertadores.
+        </p>
+        <p>
+          <img src="imagenes/viaje.jpg" width="100%" />
         </p>
         <p>
           Los blogs son la mejor forma de compartir información y tus ideas.
